tests/baselines/reference/noImplicitAnyIndexingSuppressed.errors.txt
tests/cases/compiler/noImplicitAnyIndexingSuppressed.ts(12,37): error TS2339: Property 'monehh' does not exist on type 'typeof MyEmusEnum'.
tests/cases/compiler/noImplicitAnyIndexingSuppressed.ts(19,12): error TS2339: Property 'hi' does not exist on type '{}'.
tests/cases/compiler/noImplicitAnyIndexingSuppressed.ts(22,12): error TS2339: Property '10' does not exist on type '{}'.
tests/cases/compiler/noImplicitAnyIndexingSuppressed.ts(29,19): error TS2538: Type 'any' cannot be used as an index type.


==== tests/cases/compiler/noImplicitAnyIndexingSuppressed.ts (4 errors) ====
    enum MyEmusEnum {
        emu
    }
    
    // Should be okay; should be a string.
    var strRepresentation1 = MyEmusEnum[0]
    
    // Should be okay; should be a string.
    var strRepresentation2 = MyEmusEnum[MyEmusEnum.emu]
    
    // Should be okay, as we suppress implicit 'any' property access checks
    var strRepresentation3 = MyEmusEnum["monehh"];
                                        ~~~~~~~~
!!! error TS2339: Property 'monehh' does not exist on type 'typeof MyEmusEnum'.
    
    // Should be okay; should be a MyEmusEnum
    var strRepresentation4 = MyEmusEnum["emu"];
    
    
    // Should be okay, as we suppress implicit 'any' property access checks
    var x = {}["hi"];
               ~~~~
!!! error TS2339: Property 'hi' does not exist on type '{}'.
    
    // Should be okay, as we suppress implicit 'any' property access checks
    var y = {}[10];
               ~~
!!! error TS2339: Property '10' does not exist on type '{}'.
    
    var hi: any = "hi";
    
    var emptyObj = {};
    
    // Should be okay, as we suppress implicit 'any' property access checks
    var z1 = emptyObj[hi];
                      ~~
!!! error TS2538: Type 'any' cannot be used as an index type.
    var z2 = (<any>emptyObj)[hi];
    
    interface MyMap<T> {
        [key: string]: T;
    }
    
    var m: MyMap<number> = {
        "0": 0,
        "1": 1,
        "2": 2,
        "Okay that's enough for today.": NaN
    };
    
    var mResult1 = m[MyEmusEnum.emu];
    var mResult2 = m[MyEmusEnum[MyEmusEnum.emu]];
    var mResult3 = m[hi];
    
    